[package]
name = "thunder_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
crossterm = "0.27.0"
enigo = "0.1.3"
fastnbt = "2.4.4"
flate2 = "1.0.28"
inputbot = "0.6.0"
notify = "6.1.1"
serde = "1.0.196"
